# ExoVision

./: .gitattributes  .gitignore  README.md  agent.py  app.py  pyproject.toml  requirements.txt
backend/: KOI.py  README.md  TESS.py  agent.py  forest_classifier.joblib  requirements.txt
backend/datasets/: Kepler_Objects_of_Interest.csv  filtered_features_k2pandc.csv  filtered_file.csv  filtered_file_k2pandc.csv  k2pandc_2025.09.19_14.29.24.csv
backend/saved_models/: adaboost.joblib  scaler.joblib
frontend/: index.html  script.js  styles.css
