[project]
name = "ExoVision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core AI and agentic functionality
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    
    # Web interface
    "gradio>=5.22.0",
    
    # Data processing and ML
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    
    # Visualization
    "plotly>=6.0.1",
    
    # HTTP clients
    "httpx>=0.28.1",
    "requests>=2.32.3",
    
    # Utilities
    "python-dotenv>=1.0.1",
    "pypdf>=5.4.0",
    "psutil>=7.0.0",
    "setuptools>=78.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
